--- a/index.html
+++ b/index.html
@@ -1,15 +1,148 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-    </head>
-    <body>
-        <h1>Hello World</h1>
-        <script src="" async defer></script>
-    </body>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>CS1030 Final Project</title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="index.css" />
+  </head>
+  <body>
+    <nav class="lees-nav">
+      <h1 class="main-header">CS 1030-003 Final Project</h1>
+      <h3 style="text-align: center">by: Tho Le</h3>
+    </nav>
+    <div class="nav-spacer"></div>
+
+    <section class="main-content">
+      <div class="text">
+        <div>
+          <h2 style="text-align: center" class="header">Data tools</h2>
+          <p>
+            These days, we can hardly imagine life without applications that use
+            databases built on SQL (structured query language). When saving just
+            one piece of information, we usually use a simple text (txt) file.
+            But when we need to store multiple values , a comma-separated values
+            (csv) file comes to the rescue. Using tools like Google Sheets or
+            SQL databases, we can easily perform functions like counting,
+            averaging, and summing up data in rows and columns to make sense of
+            it all. Datasets help us uncover hidden patterns, track trends, and
+            even pinpoint that one specific case we're after. It's no
+            exaggeration to say that databases and datasets are a huge part of
+            our modern lives, making countless tasks so much easier. It's
+            difficult to find an app that doesn't use a database. With
+            technology ever-evolving, we can expect databases to stick around
+            and keep making our lives better for the foreseeable future.
+          </p>
+        </div>
+        <div></div>
+      </div>
+      <div class="text">
+        <div></div>
+        <div>
+          <h2 style="text-align: center" class="header">Big Data</h2>
+          <p style="text-align: right">
+            With where we are with technology, it’s important to think about
+            when a computing system needs to store massive amounts of data
+            because we need to consider how the data will be stored and how to
+            process data efficiently. As technology advances and the amount of
+            data generated and collected grows exponentially, efficient storage
+            and processing of massive data become crucial. Organizations must
+            carefully select scalable storage solutions, employ efficient
+            algorithms and parallel computing techniques, and implement proper
+            data management to ensure data quality. Security, privacy, and
+            ethical considerations, such as data encryption, access controls,
+            and transparency, should also be taken into account to maintain data
+            integrity and user trust. By addressing these concerns,
+            organizations can leverage big data to drive innovation, enhance
+            decision-making, and unlock new opportunities while adhering to
+            ethical standards and ensuring data security and privacy.
+          </p>
+        </div>
+      </div>
+
+      <div class="text">
+        <div>
+          <h2 style="text-align: center"class="header">Bias in Machine Learning</h2>
+          <p>
+            This module offers a strong foundation in the realm of machine
+            learning, touching on fundamental concepts such as reinforcement
+            learning, unsupervised learning, and supervised learning. It delves
+            into the intricacies of neural networks, a favored technique in
+            supervised learning, elaborating on their composition and training
+            process. The significance of diverse, high-quality training data is
+            emphasized, stressing the need to tackle potential biases in the
+            data to guarantee equitable and precise outcomes. Artificial
+            intelligence enables us to accomplish remarkable feats like identity
+            recognition, ethnicity detection, and even emotion detection.
+            However, at present, these systems grapple with biases and fail to
+            operate fairly for all individuals. AI faces significant challenges
+            regarding inaccuracies in the criminal justice system, with many
+            people of color wrongfully identified and arrested due to flawed
+            facial recognition. Additionally, artificial intelligence struggles
+            with translation between gender-neutral and gender-specific
+            languages, particularly when discussing professions.
+          </p>
+        </div>
+        <div></div>
+      </div>
+      <div class="text">
+        <div></div>
+        <div>
+          <h2 style="text-align: center" class="header">Unit testing</h2>
+          <p style="text-align: right">
+            The unit test was a great way to review my learning in the three
+            modules. I scored 9 out of 9. It was pretty easy because throughout
+            reading the modules, Khan Academy gives you practice questions to
+            reinforce what I’ve just read. Some of the questions caught me off
+            guard because it seemed like there were multiple right choices, and
+            there was only one right choice. The unit test also does a good job
+            of telling you whether you got the answer right before moving on to
+            the next. It also gives you a reason why all the other answers are
+            wrong.
+          </p>
+        </div>
+      </div>
+    </section>
+    <h2 style="text-align: center; padding-bottom: 1rem; padding-top: 3rem;" class="header">
+        Data Analysis - Application and Presentation
+
+    </h2>
+    <div class="content">
+      <div class="quest">
+        <h2>Question</h2>
+        <p>What’s the top 20 countries with the most contents on Netflix?</p>
+      </div>
+      <div class="quest">
+        <h2>Process</h2>
+        <p>
+          I started this process by finding a Netflix data set on Kaggle that
+          gives me the necessary information, like the country in which the
+          content is created in. After I download the dataset. I used Python and
+          the pandas module to process data on a Kaggle notebook. After I
+          imported the dataset, I used the matplotlib module to draw a visual
+          presentation of how many movies are created in each country and limit
+          it to the highest 20.
+        </p>
+      </div>
+      <div class="quest">
+        <h2>Result</h2>
+        <p>
+          The data shows that United State have the most contents on Netflix
+          with over 4000 movies and shows. Although India comes in second place
+          with the most contents, most country in the top 20 have similar amount
+          of contents.
+        </p>
+      </div>
+      <div class="custom-img">
+        <img src="Netflix.png" alt="" class="netflix-img" />
+      </div>
+    </div>
+    <!-- <img src="Bargraph.png" alt="BarGraph" width="1000">
+        <img src="Piechart.png" alt="PieChart" width="1000">
+         -->
+
+    <script src="" async defer></script>
+  </body>
 </html>
