--- a/index.html
+++ b/index.html
@@ -20,20 +20,17 @@
         <div>
           <h2 style="text-align: center" class="header">Data tools</h2>
           <p>
-            These days, we can hardly imagine life without applications that use
-            databases built on SQL (structured query language). When saving just
-            one piece of information, we usually use a simple text (txt) file.
-            But when we need to store multiple values , a comma-separated values
-            (csv) file comes to the rescue. Using tools like Google Sheets or
-            SQL databases, we can easily perform functions like counting,
-            averaging, and summing up data in rows and columns to make sense of
-            it all. Datasets help us uncover hidden patterns, track trends, and
-            even pinpoint that one specific case we're after. It's no
-            exaggeration to say that databases and datasets are a huge part of
-            our modern lives, making countless tasks so much easier. It's
-            difficult to find an app that doesn't use a database. With
-            technology ever-evolving, we can expect databases to stick around
-            and keep making our lives better for the foreseeable future.
+            These days, we can hardly imagine life without applications that use 
+            databases built on structured query language (SQL). When saving information 
+            that you don’t care about statistics, we usually use a simple text file. 
+            Using tools like SQL databases or Excel, we can efficiently perform functions 
+            like counting, averaging, and summing up data in rows and columns to make sense 
+            of everything. Datasets help us uncover hidden patterns, track trends, and even 
+            pinpoint that one specific case we're after. It's no exaggeration to say that 
+            databases and datasets are a huge part of our modern lives, making countless 
+            tasks so much easier. It's challenging to find an app that doesn't use a database. 
+            With technology ever-evolving, we can expect databases to stick around and keep 
+            making our lives better for the foreseeable future.
           </p>
         </div>
         <div></div>
@@ -44,19 +41,18 @@
           <h2 style="text-align: center" class="header">Big Data</h2>
           <p style="text-align: right">
             With where we are with technology, it’s important to think about
-            when a computing system needs to store massive amounts of data
-            because we need to consider how the data will be stored and how to
-            process data efficiently. As technology advances and the amount of
-            data generated and collected grows exponentially, efficient storage
-            and processing of massive data become crucial. Organizations must
-            carefully select scalable storage solutions, employ efficient
-            algorithms and parallel computing techniques, and implement proper
-            data management to ensure data quality. Security, privacy, and
-            ethical considerations, such as data encryption, access controls,
-            and transparency, should also be taken into account to maintain data
-            integrity and user trust. By addressing these concerns,
-            organizations can leverage big data to drive innovation, enhance
-            decision-making, and unlock new opportunities while adhering to
+            when a computing system needs to store massive amounts of data 
+            because we need to consider how the data will be stored and how 
+            to process data efficiently. As technology advances and the amount 
+            of data generated and collected grows exponentially, efficient storage 
+            and processing of massive data, become crucial. Organizations must 
+            carefully select scalable storage solutions, employ efficient algorithms 
+            and parallel computing techniques, and implement proper data management 
+            to ensure data quality. Security, privacy, and ethical considerations, 
+            such as data encryption, access controls, and transparency, should also 
+            be considered to maintain data integrity and user trust. By addressing 
+            these concerns, organizations can leverage big data to drive innovation, 
+            enhance decision-making, and unlock new opportunities while adhering to 
             ethical standards and ensuring data security and privacy.
           </p>
         </div>
@@ -66,23 +62,19 @@
         <div>
           <h2 style="text-align: center"class="header">Bias in Machine Learning</h2>
           <p>
-            This module offers a strong foundation in the realm of machine
-            learning, touching on fundamental concepts such as reinforcement
-            learning, unsupervised learning, and supervised learning. It delves
-            into the intricacies of neural networks, a favored technique in
-            supervised learning, elaborating on their composition and training
-            process. The significance of diverse, high-quality training data is
-            emphasized, stressing the need to tackle potential biases in the
-            data to guarantee equitable and precise outcomes. Artificial
-            intelligence enables us to accomplish remarkable feats like identity
-            recognition, ethnicity detection, and even emotion detection.
-            However, at present, these systems grapple with biases and fail to
-            operate fairly for all individuals. AI faces significant challenges
-            regarding inaccuracies in the criminal justice system, with many
-            people of color wrongfully identified and arrested due to flawed
-            facial recognition. Additionally, artificial intelligence struggles
-            with translation between gender-neutral and gender-specific
-            languages, particularly when discussing professions.
+            This module offers a comprehensive introduction to machine learning, 
+            encompassing fundamental concepts such as reinforcement, unsupervised, 
+            and supervised learning. It delves into neural networks, a widely used 
+            technique in supervised learning, outlining their architecture and training 
+            processes. The significance of diverse and high-quality training data is 
+            underscored, emphasizing the need to tackle potential biases in the data 
+            to guarantee equitable and precise outcomes. Artificial intelligence 
+            enables us to accomplish remarkable tasks like identity recognition, 
+            ethnicity detection, and emotion recognition. However, current AI 
+            systems grapple with biases and fail to operate fairly for all individuals. 
+            AI faces significant accuracy issues in the criminal justice system, 
+            leading to the wrongful identification and arrest of many people of 
+            color due to flawed facial recognition technology.
           </p>
         </div>
         <div></div>
@@ -117,13 +109,11 @@
       <div class="quest">
         <h2>Process</h2>
         <p>
-          I started this process by finding a Netflix data set on Kaggle that
-          gives me the necessary information, like the country in which the
-          content is created in. After I download the dataset. I used Python and
-          the pandas module to process data on a Kaggle notebook. After I
-          imported the dataset, I used the matplotlib module to draw a visual
-          presentation of how many movies are created in each country and limit
-          it to the highest 20.
+            I started this process by finding a Netflix data set on Kaggle that gives me the necessary information, 
+            like the country in which the content is created in. This data contains 6234 rows and 12 columns. 
+            After I download the dataset as a .csv file. I used Python and the pandas module to process data on a 
+            Kaggle notebook. After I imported the dataset as a data frame, I used the matplotlib module to draw a 
+            visual presentation of how many movies are created in each country and limit it to the highest 20.
         </p>
       </div>
       <div class="quest">
